# Kumiko-IPC

./: .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
.github/workflows/: docker-build.yml
Docker/: Dockerfile  start.sh
celery_ipc/: celeryconfig.py  tasks.py  worker.py
dramatiq_ipc/: worker.py
kumiko-ipc/: runner.py  worker.py
kumiko_ipc/: config.py  runner.py  worker.py
pika-server/: consumer.py  publisher.py
scripts/: dramatiq-runner.py  runner.py
server/: consumer_service.py  main.py
webserver/: main.py
